<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <TextView
        android:id="@+id/tv_gallery_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_gallery_title"
        android:textColor="#ffffff"
        android:textSize="24sp" />
	
	<View 
	    android:id="@+id/title_divider"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_below="@id/tv_gallery_title"
	    android:layout_margin="5dp"
	    android:background="#ffffff" />

    <GridView
        android:id="@+id/gridview_gallery"
        android:layout_below="@id/title_divider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:horizontalSpacing="0dp"
        android:verticalSpacing="15dp"
        android:numColumns="3"
        android:gravity="center"
        android:padding="0dp"
        android:background="#00000000">
        
    </GridView>

    <ImageView
        android:id="@+id/img_big"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_divider"
        android:src="@drawable/sample"
        android:contentDescription="@string/app_name"
        android:visibility="invisible" />

	<ViewFlipper 
	    android:id="@+id/viewflipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_divider"
        android:visibility="invisible" >
	</ViewFlipper>
	
	<TextView
	    android:id="@+id/tv_gallery_empty"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:textColor="#ffffff"
	    android:textSize="20sp"
	    android:text="@string/tv_gallery_empty" />
	
	<ImageView
        android:id="@+id/img_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loading2"
        android:contentDescription="@string/app_name"
        android:visibility="visible" />

</RelativeLayout>
